# database-testing

./: .gitignore  README.md  pyproject.toml
data_stats/: clickhouse.csv  clickhouse_1_workers_local.csv  clickhouse_1_workers_remote.csv  clickhouse_4_workers_local.csv  clickhouse_4_workers_remote.csv  cratedb.csv  cratedb_1_workers_local.csv  cratedb_1_workers_remote.csv  cratedb_4_workers_local.csv  cratedb_4_workers_remote.csv  influxdb.csv  influxdb_1_workers_local.csv  influxdb_1_workers_remote.csv  influxdb_4_workers_local.csv  influxdb_4_workers_remote.csv  questdb.csv  timescale.csv
src/: _clickhouse.py  _cratedb.py  _influxdb.py  _questdb.py  _tdengine.py  _timescale.py  comp.py  config.py  data_generation.py  utils.py
